src/compiler/c_parser.output
Terminals unused in grammar

   Goto_KEY
   Union_KEY
   Restrict_KEY
   PTR_Ref


State 14 conflicts: 19 reduce/reduce
State 78 conflicts: 6 shift/reduce
State 132 conflicts: 1 shift/reduce
State 207 conflicts: 1 reduce/reduce
State 296 conflicts: 1 shift/reduce


Grammar

    0 $accept: root $end

    1 root: top_declaration

    2 top_declaration: top_declaration declaration
    3                | top_declaration function_definition
    4                | top_declaration Semicolon
    5                | declaration
    6                | Semicolon
    7                | function_definition

    8 expression: assign_expressions
    9           | expression Comma assign_expressions

   10 assign_expressions: constant_expression
   11                   | unary_expression Equal assign_expressions
   12                   | unary_expression Add_CURRENT assign_expressions
   13                   | unary_expression Sub_CURRENT assign_expressions
   14                   | unary_expression Mul_CURRENT assign_expressions
   15                   | unary_expression Div_CURRENT assign_expressions
   16                   | unary_expression Mod_CURRENT assign_expressions
   17                   | unary_expression And_CURRENT assign_expressions
   18                   | unary_expression Xor_CURRENT assign_expressions
   19                   | unary_expression Or_CURRENT assign_expressions
   20                   | unary_expression LShift_CURRENT assign_expressions
   21                   | unary_expression RShift_CURRENT assign_expressions
   22                   | OCurly_BRACKET argument_expression_list CCurly_BRACKET

   23 constant_expression: conditional_logical_or
   24                    | conditional_logical_or Question_BIT expression Colon constant_expression

   25 argument_expression_list: assign_expressions
   26                         | argument_expression_list Comma assign_expressions

   27 function_definition: all_type_specifiers IDENTIFIER Open_BRACKET parameter_type_list Close_BRACKET compound_statement
   28                    | all_type_specifiers IDENTIFIER Open_BRACKET Close_BRACKET compound_statement
   29                    | IDENTIFIER Open_BRACKET parameter_type_list Close_BRACKET compound_statement
   30                    | IDENTIFIER Open_BRACKET Close_BRACKET compound_statement

   31 all_type_specifiers: storage_specifiers all_type_specifiers
   32                    | type_specifier
   33                    | type_specifier all_type_specifiers
   34                    | type_qualifier all_type_specifiers

   35 direct_declarator: Open_BRACKET declarator Close_BRACKET
   36                  | IDENTIFIER OSquare_BRACKET constant_expression CSquare_BRACKET
   37                  | IDENTIFIER OSquare_BRACKET CSquare_BRACKET
   38                  | IDENTIFIER Open_BRACKET parameter_type_list Close_BRACKET
   39                  | IDENTIFIER Open_BRACKET Close_BRACKET
   40                  | IDENTIFIER

   41 declarator: pointer direct_declarator
   42           | direct_declarator

   43 pointer: Multiply_MATH
   44        | Multiply_MATH specifier_qualifier_list
   45        | Multiply_MATH pointer
   46        | Multiply_MATH specifier_qualifier_list pointer

   47 declaration: all_type_specifiers Semicolon
   48            | all_type_specifiers initialisers_list Semicolon

   49 initialisers_list: initialisers_declarator
   50                  | initialisers_list Comma initialisers_declarator

   51 initialisers_declarator: declarator
   52                        | declarator Equal assign_expressions

   53 shift_expression: additive_expression
   54                 | shift_expression LShift_BIT additive_expression
   55                 | shift_expression RShift_BIT additive_expression

   56 additive_expression: multiplicative_expression
   57                    | additive_expression Plus_MATH multiplicative_expression
   58                    | additive_expression Subtract_MATH multiplicative_expression

   59 multiplicative_expression: cast_expression
   60                          | multiplicative_expression Multiply_MATH cast_expression
   61                          | multiplicative_expression Divide_MATH cast_expression
   62                          | multiplicative_expression Percentage_MATH cast_expression

   63 cast_expression: unary_expression
   64                | Open_BRACKET type_name Close_BRACKET cast_expression

   65 relational_expression: shift_expression
   66                      | relational_expression Less_COMP shift_expression
   67                      | relational_expression Greater_COMP shift_expression
   68                      | relational_expression LEqual_COMP shift_expression
   69                      | relational_expression GEqual_COMP shift_expression

   70 equality_expression: relational_expression
   71                    | equality_expression Equal_COMP relational_expression
   72                    | equality_expression NEqual_COMP relational_expression

   73 and_expression: equality_expression
   74               | and_expression And_BIT equality_expression

   75 exclusive_or_expression: and_expression
   76                        | exclusive_or_expression Xor_BIT and_expression

   77 inclusive_or_expression: exclusive_or_expression
   78                        | inclusive_or_expression Or_BIT exclusive_or_expression

   79 logical_and_expression: inclusive_or_expression
   80                       | logical_and_expression AndAnd_BIT inclusive_or_expression

   81 conditional_logical_or: logical_and_expression
   82                       | conditional_logical_or OrOr_BIT logical_and_expression

   83 primary_expression: NUMBER
   84                   | Char_literal
   85                   | Subtract_MATH primary_expression
   86                   | IDENTIFIER
   87                   | Open_BRACKET expression Close_BRACKET
   88                   | String_literal

   89 postfix_expression: primary_expression
   90                   | postfix_expression OSquare_BRACKET expression CSquare_BRACKET
   91                   | IDENTIFIER Open_BRACKET Close_BRACKET
   92                   | IDENTIFIER Open_BRACKET argument_expression_list Close_BRACKET
   93                   | primary_expression Dot_Ref IDENTIFIER
   94                   | IDENTIFIER Increment_MATH
   95                   | IDENTIFIER Decrement_MATH

   96 unary_expression: postfix_expression
   97                 | Increment_MATH IDENTIFIER
   98                 | Decrement_MATH IDENTIFIER
   99                 | unary_operator cast_expression
  100                 | Sizeof_KEY unary_expression
  101                 | Sizeof_KEY Open_BRACKET type_name Close_BRACKET

  102 type_name: specifier_qualifier_list
  103          | specifier_qualifier_list abstract_declarator

  104 specifier_qualifier_list: type_specifier
  105                         | type_qualifier specifier_qualifier_list
  106                         | type_qualifier

  107 abstract_declarator: Open_BRACKET abstract_declarator Close_BRACKET
  108                    | OSquare_BRACKET CSquare_BRACKET
  109                    | OSquare_BRACKET constant_expression CSquare_BRACKET
  110                    | abstract_declarator OSquare_BRACKET CSquare_BRACKET
  111                    | abstract_declarator OSquare_BRACKET constant_expression CSquare_BRACKET
  112                    | Open_BRACKET Close_BRACKET
  113                    | Open_BRACKET parameter_type_list Close_BRACKET

  114 parameter_type_list: parameter_list
  115                    | parameter_list Comma Ellipses

  116 parameter_list: parameter_list Comma parameter_declaration
  117               | parameter_declaration

  118 parameter_declaration: all_type_specifiers declarator
  119                      | all_type_specifiers

  120 statement: expression_statement
  121          | compound_statement
  122          | if_else_statement
  123          | for_while_statement
  124          | return_statement
  125          | declaration
  126          | labeled_statement
  127          | case_statement_list

  128 labeled_statement: IDENTIFIER Colon statement

  129 case_statement_list: case_statement_list Case_KEY constant_expression Colon statement
  130                    | case_statement_list Case_KEY Default_KEY Colon statement
  131                    | Case_KEY constant_expression Colon statement
  132                    | Default_KEY Colon statement

  133 if_else_statement: If_KEY Open_BRACKET expression Close_BRACKET statement
  134                  | If_KEY Open_BRACKET expression Close_BRACKET statement Else_KEY statement
  135                  | Switch_KEY Open_BRACKET expression Close_BRACKET statement

  136 for_while_statement: For_KEY Open_BRACKET expression Semicolon expression Semicolon Close_BRACKET statement
  137                    | For_KEY Open_BRACKET expression Semicolon expression Semicolon expression Close_BRACKET statement
  138                    | While_KEY Open_BRACKET expression Close_BRACKET statement
  139                    | Do_KEY statement While_KEY Open_BRACKET expression Close_BRACKET Semicolon

  140 return_statement: Return_KEY Semicolon
  141                 | Return_KEY expression Semicolon
  142                 | Break_KEY Semicolon
  143                 | Continue_KEY Semicolon

  144 expression_statement: Semicolon
  145                     | expression Semicolon

  146 compound_statement: OCurly_BRACKET CCurly_BRACKET
  147                   | OCurly_BRACKET statement_list CCurly_BRACKET

  148 statement_list: statement
  149               | statement_list statement

  150 storage_specifiers: Typedef_KEY
  151                   | Extern_KEY
  152                   | Static_KEY
  153                   | Auto_KEY
  154                   | Register_KEY

  155 type_specifier: Void_KEY
  156               | Char_KEY
  157               | Short_KEY
  158               | Int_KEY
  159               | Long_KEY
  160               | Float_KEY
  161               | Double_KEY
  162               | Signed_KEY
  163               | Unsigned_KEY
  164               | Struct_KEY
  165               | Enum_KEY
  166               | Typedef_KEY
  167               | String_KEY

  168 unary_operator: And_BIT
  169               | Multiply_MATH
  170               | Plus_MATH
  171               | Subtract_MATH
  172               | Tilde_BIT
  173               | Not_BIT

  174 type_qualifier: Const_KEY
  175               | Volatile_KEY


Terminals, with rules where they appear

$end (0) 0
error (256)
Continue_KEY (258) 143
String_KEY (259) 167
Default_KEY (260) 130 132
Short_KEY (261) 157
Goto_KEY (262)
If_KEY (263) 133 134
Extern_KEY (264) 151
Float_KEY (265) 160
Unsigned_KEY (266) 163
Void_KEY (267) 155
Long_KEY (268) 159
Volatile_KEY (269) 175
While_KEY (270) 138 139
Const_KEY (271) 174
Char_KEY (272) 156
For_KEY (273) 136 137
Auto_KEY (274) 153
Do_KEY (275) 139
Sizeof_KEY (276) 100 101
Union_KEY (277)
Double_KEY (278) 161
Int_KEY (279) 158
Typedef_KEY (280) 150 166
Else_KEY (281) 134
Return_KEY (282) 140 141
Static_KEY (283) 152
Enum_KEY (284) 165
Case_KEY (285) 129 130 131
Register_KEY (286) 154
Restrict_KEY (287)
Break_KEY (288) 142
Signed_KEY (289) 162
Switch_KEY (290) 135
Struct_KEY (291) 164
Plus_MATH (292) 57 170
Subtract_MATH (293) 58 85 171
Multiply_MATH (294) 43 44 45 46 60 169
Divide_MATH (295) 61
Percentage_MATH (296) 62
Increment_MATH (297) 94 97
Decrement_MATH (298) 95 98
And_BIT (299) 74 168
Or_BIT (300) 78
Xor_BIT (301) 76
Tilde_BIT (302) 172
Not_BIT (303) 173
AndAnd_BIT (304) 80
OrOr_BIT (305) 82
LShift_BIT (306) 54
RShift_BIT (307) 55
Question_BIT (308) 24
Less_COMP (309) 66
Greater_COMP (310) 67
Equal_COMP (311) 71
NEqual_COMP (312) 72
GEqual_COMP (313) 69
LEqual_COMP (314) 68
Open_BRACKET (315) 27 28 29 30 35 38 39 64 87 91 92 101 107 112 113
    133 134 135 136 137 138 139
Close_BRACKET (316) 27 28 29 30 35 38 39 64 87 91 92 101 107 112 113
    133 134 135 136 137 138 139
OSquare_BRACKET (317) 36 37 90 108 109 110 111
CSquare_BRACKET (318) 36 37 90 108 109 110 111
OCurly_BRACKET (319) 22 146 147
CCurly_BRACKET (320) 22 146 147
Add_CURRENT (321) 12
Sub_CURRENT (322) 13
Mul_CURRENT (323) 14
Div_CURRENT (324) 15
Mod_CURRENT (325) 16
And_CURRENT (326) 17
Xor_CURRENT (327) 18
Or_CURRENT (328) 19
LShift_CURRENT (329) 20
RShift_CURRENT (330) 21
Equal (331) 11 52
Ellipses (332) 115
Semicolon (333) 4 6 47 48 136 137 139 140 141 142 143 144 145
PTR_Ref (334)
Colon (335) 24 128 129 130 131 132
Comma (336) 9 26 50 115 116
Dot_Ref (337) 93
IDENTIFIER (338) 27 28 29 30 36 37 38 39 40 86 91 92 93 94 95 97 98
    128
String_literal (339) 88
NUMBER (340) 83
Char_literal (341) 84


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
root (88)
    on left: 1, on right: 0
top_declaration (89)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4
expression (90)
    on left: 8 9, on right: 9 24 87 90 133 134 135 136 137 138 139
    141 145
assign_expressions (91)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22, on right: 8 9
    11 12 13 14 15 16 17 18 19 20 21 25 26 52
constant_expression (92)
    on left: 23 24, on right: 10 24 36 109 111 129 131
argument_expression_list (93)
    on left: 25 26, on right: 22 26 92
function_definition (94)
    on left: 27 28 29 30, on right: 3 7
all_type_specifiers (95)
    on left: 31 32 33 34, on right: 27 28 31 33 34 47 48 118 119
direct_declarator (96)
    on left: 35 36 37 38 39 40, on right: 41 42
declarator (97)
    on left: 41 42, on right: 35 51 52 118
pointer (98)
    on left: 43 44 45 46, on right: 41 45 46
declaration (99)
    on left: 47 48, on right: 2 5 125
initialisers_list (100)
    on left: 49 50, on right: 48 50
initialisers_declarator (101)
    on left: 51 52, on right: 49 50
shift_expression (102)
    on left: 53 54 55, on right: 54 55 65 66 67 68 69
additive_expression (103)
    on left: 56 57 58, on right: 53 54 55 57 58
multiplicative_expression (104)
    on left: 59 60 61 62, on right: 56 57 58 60 61 62
cast_expression (105)
    on left: 63 64, on right: 59 60 61 62 64 99
relational_expression (106)
    on left: 65 66 67 68 69, on right: 66 67 68 69 70 71 72
equality_expression (107)
    on left: 70 71 72, on right: 71 72 73 74
and_expression (108)
    on left: 73 74, on right: 74 75 76
exclusive_or_expression (109)
    on left: 75 76, on right: 76 77 78
inclusive_or_expression (110)
    on left: 77 78, on right: 78 79 80
logical_and_expression (111)
    on left: 79 80, on right: 80 81 82
conditional_logical_or (112)
    on left: 81 82, on right: 23 24 82
primary_expression (113)
    on left: 83 84 85 86 87 88, on right: 85 89 93
postfix_expression (114)
    on left: 89 90 91 92 93 94 95, on right: 90 96
unary_expression (115)
    on left: 96 97 98 99 100 101, on right: 11 12 13 14 15 16 17 18
    19 20 21 63 100
type_name (116)
    on left: 102 103, on right: 64 101
specifier_qualifier_list (117)
    on left: 104 105 106, on right: 44 46 102 103 105
abstract_declarator (118)
    on left: 107 108 109 110 111 112 113, on right: 103 107 110 111
parameter_type_list (119)
    on left: 114 115, on right: 27 29 38 113
parameter_list (120)
    on left: 116 117, on right: 114 115 116
parameter_declaration (121)
    on left: 118 119, on right: 116 117
statement (122)
    on left: 120 121 122 123 124 125 126 127, on right: 128 129 130
    131 132 133 134 135 136 137 138 139 148 149
labeled_statement (123)
    on left: 128, on right: 126
case_statement_list (124)
    on left: 129 130 131 132, on right: 127 129 130
if_else_statement (125)
    on left: 133 134 135, on right: 122
for_while_statement (126)
    on left: 136 137 138 139, on right: 123
return_statement (127)
    on left: 140 141 142 143, on right: 124
expression_statement (128)
    on left: 144 145, on right: 120
compound_statement (129)
    on left: 146 147, on right: 27 28 29 30 121
statement_list (130)
    on left: 148 149, on right: 147 149
storage_specifiers (131)
    on left: 150 151 152 153 154, on right: 31
type_specifier (132)
    on left: 155 156 157 158 159 160 161 162 163 164 165 166 167, on right:
    32 33 104
unary_operator (133)
    on left: 168 169 170 171 172 173, on right: 99
type_qualifier (134)
    on left: 174 175, on right: 34 105 106


State 0

    0 $accept: . root $end

    String_KEY    shift, and go to state 1
    Short_KEY     shift, and go to state 2
    Extern_KEY    shift, and go to state 3
    Float_KEY     shift, and go to state 4
    Unsigned_KEY  shift, and go to state 5
    Void_KEY      shift, and go to state 6
    Long_KEY      shift, and go to state 7
    Volatile_KEY  shift, and go to state 8
    Const_KEY     shift, and go to state 9
    Char_KEY      shift, and go to state 10
    Auto_KEY      shift, and go to state 11
    Double_KEY    shift, and go to state 12
    Int_KEY       shift, and go to state 13
    Typedef_KEY   shift, and go to state 14
    Static_KEY    shift, and go to state 15
    Enum_KEY      shift, and go to state 16
    Register_KEY  shift, and go to state 17
    Signed_KEY    shift, and go to state 18
    Struct_KEY    shift, and go to state 19
    Semicolon     shift, and go to state 20
    IDENTIFIER    shift, and go to state 21

    root                 go to state 22
    top_declaration      go to state 23
    function_definition  go to state 24
    all_type_specifiers  go to state 25
    declaration          go to state 26
    storage_specifiers   go to state 27
    type_specifier       go to state 28
    type_qualifier       go to state 29


State 1

  167 type_specifier: String_KEY .

    $default  reduce using rule 167 (type_specifier)


State 2

  157 type_specifier: Short_KEY .

    $default  reduce using rule 157 (type_specifier)


State 3

  151 storage_specifiers: Extern_KEY .

    $default  reduce using rule 151 (storage_specifiers)


State 4

  160 type_specifier: Float_KEY .

    $default  reduce using rule 160 (type_specifier)


State 5

  163 type_specifier: Unsigned_KEY .

    $default  reduce using rule 163 (type_specifier)


State 6

  155 type_specifier: Void_KEY .

    $default  reduce using rule 155 (type_specifier)


State 7

  159 type_specifier: Long_KEY .

    $default  reduce using rule 159 (type_specifier)


State 8

  175 type_qualifier: Volatile_KEY .

    $default  reduce using rule 175 (type_qualifier)


State 9

  174 type_qualifier: Const_KEY .

    $default  reduce using rule 174 (type_qualifier)


State 10

  156 type_specifier: Char_KEY .

    $default  reduce using rule 156 (type_specifier)


State 11

  153 storage_specifiers: Auto_KEY .

    $default  reduce using rule 153 (storage_specifiers)


State 12

  161 type_specifier: Double_KEY .

    $default  reduce using rule 161 (type_specifier)


State 13

  158 type_specifier: Int_KEY .

    $default  reduce using rule 158 (type_specifier)


State 14

  150 storage_specifiers: Typedef_KEY .
  166 type_specifier: Typedef_KEY .

    String_KEY     reduce using rule 150 (storage_specifiers)
    String_KEY     [reduce using rule 166 (type_specifier)]
    Short_KEY      reduce using rule 150 (storage_specifiers)
    Short_KEY      [reduce using rule 166 (type_specifier)]
    Extern_KEY     reduce using rule 150 (storage_specifiers)
    Extern_KEY     [reduce using rule 166 (type_specifier)]
    Float_KEY      reduce using rule 150 (storage_specifiers)
    Float_KEY      [reduce using rule 166 (type_specifier)]
    Unsigned_KEY   reduce using rule 150 (storage_specifiers)
    Unsigned_KEY   [reduce using rule 166 (type_specifier)]
    Void_KEY       reduce using rule 150 (storage_specifiers)
    Void_KEY       [reduce using rule 166 (type_specifier)]
    Long_KEY       reduce using rule 150 (storage_specifiers)
    Long_KEY       [reduce using rule 166 (type_specifier)]
    Volatile_KEY   reduce using rule 150 (storage_specifiers)
    Volatile_KEY   [reduce using rule 166 (type_specifier)]
    Const_KEY      reduce using rule 150 (storage_specifiers)
    Const_KEY      [reduce using rule 166 (type_specifier)]
    Char_KEY       reduce using rule 150 (storage_specifiers)
    Char_KEY       [reduce using rule 166 (type_specifier)]
    Auto_KEY       reduce using rule 150 (storage_specifiers)
    Auto_KEY       [reduce using rule 166 (type_specifier)]
    Double_KEY     reduce using rule 150 (storage_specifiers)
    Double_KEY     [reduce using rule 166 (type_specifier)]
    Int_KEY        reduce using rule 150 (storage_specifiers)
    Int_KEY        [reduce using rule 166 (type_specifier)]
    Typedef_KEY    reduce using rule 150 (storage_specifiers)
    Typedef_KEY    [reduce using rule 166 (type_specifier)]
    Static_KEY     reduce using rule 150 (storage_specifiers)
    Static_KEY     [reduce using rule 166 (type_specifier)]
    Enum_KEY       reduce using rule 150 (storage_specifiers)
    Enum_KEY       [reduce using rule 166 (type_specifier)]
    Register_KEY   reduce using rule 150 (storage_specifiers)
    Register_KEY   [reduce using rule 166 (type_specifier)]
    Signed_KEY     reduce using rule 150 (storage_specifiers)
    Signed_KEY     [reduce using rule 166 (type_specifier)]
    Struct_KEY     reduce using rule 150 (storage_specifiers)
    Struct_KEY     [reduce using rule 166 (type_specifier)]
    Multiply_MATH  reduce using rule 166 (type_specifier)
    Open_BRACKET   reduce using rule 166 (type_specifier)
    Close_BRACKET  reduce using rule 166 (type_specifier)
    Semicolon      reduce using rule 166 (type_specifier)
    Comma          reduce using rule 166 (type_specifier)
    IDENTIFIER     reduce using rule 166 (type_specifier)
    $default       reduce using rule 150 (storage_specifiers)


State 15

  152 storage_specifiers: Static_KEY .

    $default  reduce using rule 152 (storage_specifiers)


State 16

  165 type_specifier: Enum_KEY .

    $default  reduce using rule 165 (type_specifier)


State 17

  154 storage_specifiers: Register_KEY .

    $default  reduce using rule 154 (storage_specifiers)


State 18

  162 type_specifier: Signed_KEY .

    $default  reduce using rule 162 (type_specifier)


State 19

  164 type_specifier: Struct_KEY .

    $default  reduce using rule 164 (type_specifier)


State 20

    6 top_declaration: Semicolon .

    $default  reduce using rule 6 (top_declaration)


State 21

   29 function_definition: IDENTIFIER . Open_BRACKET parameter_type_list Close_BRACKET compound_statement
   30                    | IDENTIFIER . Open_BRACKET Close_BRACKET compound_statement

    Open_BRACKET  shift, and go to state 30


State 22

    0 $accept: root . $end

    $end  shift, and go to state 31


State 23

    1 root: top_declaration .
    2 top_declaration: top_declaration . declaration
    3                | top_declaration . function_definition
    4                | top_declaration . Semicolon

    String_KEY    shift, and go to state 1
    Short_KEY     shift, and go to state 2
    Extern_KEY    shift, and go to state 3
    Float_KEY     shift, and go to state 4
    Unsigned_KEY  shift, and go to state 5
    Void_KEY      shift, and go to state 6
    Long_KEY      shift, and go to state 7
    Volatile_KEY  shift, and go to state 8
    Const_KEY     shift, and go to state 9
    Char_KEY      shift, and go to state 10
    Auto_KEY      shift, and go to state 11
    Double_KEY    shift, and go to state 12
    Int_KEY       shift, and go to state 13
    Typedef_KEY   shift, and go to state 14
    Static_KEY    shift, and go to state 15
    Enum_KEY      shift, and go to state 16
    Register_KEY  shift, and go to state 17
    Signed_KEY    shift, and go to state 18
    Struct_KEY    shift, and go to state 19
    Semicolon     shift, and go to state 32
    IDENTIFIER    shift, and go to state 21

    $default  reduce using rule 1 (root)

    function_definition  go to state 33
    all_type_specifiers  go to state 25
    declaration          go to state 34
    storage_specifiers   go to state 27
    type_specifier       go to state 28
    type_qualifier       go to state 29


State 24

    7 top_declaration: function_definition .

    $default  reduce using rule 7 (top_declaration)


State 25

   27 function_definition: all_type_specifiers . IDENTIFIER Open_BRACKET parameter_type_list Close_BRACKET compound_statement
   28                    | all_type_specifiers . IDENTIFIER Open_BRACKET Close_BRACKET compound_statement
   47 declaration: all_type_specifiers . Semicolon
   48            | all_type_specifiers . initialisers_list Semicolon

    Multiply_MATH  shift, and go to state 35
    Open_BRACKET   shift, and go to state 36
    Semicolon      shift, and go to state 37
    IDENTIFIER     shift, and go to state 38

    direct_declarator        go to state 39
    declarator               go to state 40
    pointer                  go to state 41
    initialisers_list        go to state 42
    initialisers_declarator  go to state 43


State 26

    5 top_declaration: declaration .

    $default  reduce using rule 5 (top_declaration)


State 27

   31 all_type_specifiers: storage_specifiers . all_type_specifiers

    String_KEY    shift, and go to state 1
    Short_KEY     shift, and go to state 2
    Extern_KEY    shift, and go to state 3
    Float_KEY     shift, and go to state 4
    Unsigned_KEY  shift, and go to state 5
    Void_KEY      shift, and go to state 6
    Long_KEY      shift, and go to state 7
    Volatile_KEY  shift, and go to state 8
    Const_KEY     shift, and go to state 9
    Char_KEY      shift, and go to state 10
    Auto_KEY      shift, and go to state 11
    Double_KEY    shift, and go to state 12
    Int_KEY       shift, and go to state 13
    Typedef_KEY   shift, and go to state 14
    Static_KEY    shift, and go to state 15
    Enum_KEY      shift, and go to state 16
    Register_KEY  shift, and go to state 17
    Signed_KEY    shift, and go to state 18
    Struct_KEY    shift, and go to state 19

    all_type_specifiers  go to state 44
    storage_specifiers   go to state 27
    type_specifier       go to state 28
    type_qualifier       go to state 29


State 28

   32 all_type_specifiers: type_specifier .
   33                    | type_specifier . all_type_specifiers

    String_KEY    shift, and go to state 1
    Short_KEY     shift, and go to state 2
    Extern_KEY    shift, and go to state 3
    Float_KEY     shift, and go to state 4
    Unsigned_KEY  shift, and go to state 5
    Void_KEY      shift, and go to state 6
    Long_KEY      shift, and go to state 7
    Volatile_KEY  shift, and go to state 8
    Const_KEY     shift, and go to state 9
    Char_KEY      shift, and go to state 10
    Auto_KEY      shift, and go to state 11
    Double_KEY    shift, and go to state 12
    Int_KEY       shift, and go to state 13
    Typedef_KEY   shift, and go to state 14
    Static_KEY    shift, and go to state 15
    Enum_KEY      shift, and go to state 16
    Register_KEY  shift, and go to state 17
    Signed_KEY    shift, and go to state 18
    Struct_KEY    shift, and go to state 19

    $default  reduce using rule 32 (all_type_specifiers)

    all_type_specifiers  go to state 45
    storage_specifiers   go to state 27
    type_specifier       go to state 28
    type_qualifier       go to state 29


State 29

   34 all_type_specifiers: type_qualifier . all_type_specifiers

    String_KEY    shift, and go to state 1
    Short_KEY     shift, and go to state 2
    Extern_KEY    shift, and go to state 3
    Float_KEY     shift, and go to state 4
    Unsigned_KEY  shift, and go to state 5
    Void_KEY      shift, and go to state 6
    Long_KEY      shift, and go to state 7
    Volatile_KEY  shift, and go to state 8
    Const_KEY     shift, and go to state 9
    Char_KEY      shift, and go to state 10
    Auto_KEY      shift, and go to state 11
    Double_KEY    shift, and go to state 12
    Int_KEY       shift, and go to state 13
    Typedef_KEY   shift, and go to state 14
    Static_KEY    shift, and go to state 15
    Enum_KEY      shift, and go to state 16
    Register_KEY  shift, and go to state 17
    Signed_KEY    shift, and go to state 18
    Struct_KEY    shift, and go to state 19

    all_type_specifiers  go to state 46
    storage_specifiers   go to state 27
    type_specifier       go to state 28
    type_qualifier       go to state 29


State 30

   29 function_definition: IDENTIFIER Open_BRACKET . parameter_type_list Close_BRACKET compound_statement
   30                    | IDENTIFIER Open_BRACKET . Close_BRACKET compound_statement

    String_KEY     shift, and go to state 1
    Short_KEY      shift, and go to state 2
    Extern_KEY     shift, and go to state 3
    Float_KEY      shift, and go to state 4
    Unsigned_KEY   shift, and go to state 5
    Void_KEY       shift, and go to state 6
    Long_KEY       shift, and go to state 7
    Volatile_KEY   shift, and go to state 8
    Const_KEY      shift, and go to state 9
    Char_KEY       shift, and go to state 10
    Auto_KEY       shift, and go to state 11
    Double_KEY     shift, and go to state 12
    Int_KEY        shift, and go to state 13
    Typedef_KEY    shift, and go to state 14
    Static_KEY     shift, and go to state 15
    Enum_KEY       shift, and go to state 16
    Register_KEY   shift, and go to state 17
    Signed_KEY     shift, and go to state 18
    Struct_KEY     shift, and go to state 19
    Close_BRACKET  shift, and go to state 47

    all_type_specifiers    go to state 48
    parameter_type_list    go to state 49
    parameter_list         go to state 50
    parameter_declaration  go to state 51
    storage_specifiers     go to state 27
    type_specifier         go to state 28
    type_qualifier         go to state 29


State 31

    0 $accept: root $end .

    $default  accept


State 32

    4 top_declaration: top_declaration Semicolon .

    $default  reduce using rule 4 (top_declaration)


State 33

    3 top_declaration: top_declaration function_definition .

    $default  reduce using rule 3 (top_declaration)


State 34

    2 top_declaration: top_declaration declaration .

    $default  reduce using rule 2 (top_declaration)


State 35

   43 pointer: Multiply_MATH .
   44        | Multiply_MATH . specifier_qualifier_list
   45        | Multiply_MATH . pointer
   46        | Multiply_MATH . specifier_qualifier_list pointer

    String_KEY     shift, and go to state 1
    Short_KEY      shift, and go to state 2
    Float_KEY      shift, and go to state 4
    Unsigned_KEY   shift, and go to state 5
    Void_KEY       shift, and go to state 6
    Long_KEY       shift, and go to state 7
    Volatile_KEY   shift, and go to state 8
    Const_KEY      shift, and go to state 9
    Char_KEY       shift, and go to state 10
    Double_KEY     shift, and go to state 12
    Int_KEY        shift, and go to state 13
    Typedef_KEY    shift, and go to state 52
    Enum_KEY       shift, and go to state 16
    Signed_KEY     shift, and go to state 18
    Struct_KEY     shift, and go to state 19
    Multiply_MATH  shift, and go to state 35

    $default  reduce using rule 43 (pointer)

    pointer                   go to state 53
    specifier_qualifier_list  go to state 54
    type_specifier            go to state 55
    type_qualifier            go to state 56


State 36

   35 direct_declarator: Open_BRACKET . declarator Close_BRACKET

    Multiply_MATH  shift, and go to state 35
    Open_BRACKET   shift, and go to state 36
    IDENTIFIER     shift, and go to state 57

    direct_declarator  go to state 39
    declarator         go to state 58
    pointer            go to state 41


State 37

   47 declaration: all_type_specifiers Semicolon .

    $default  reduce using rule 47 (declaration)


State 38

   27 function_definition: all_type_specifiers IDENTIFIER . Open_BRACKET parameter_type_list Close_BRACKET compound_statement
   28                    | all_type_specifiers IDENTIFIER . Open_BRACKET Close_BRACKET compound_statement
   36 direct_declarator: IDENTIFIER . OSquare_BRACKET constant_expression CSquare_BRACKET
   37                  | IDENTIFIER . OSquare_BRACKET CSquare_BRACKET
   38                  | IDENTIFIER . Open_BRACKET parameter_type_list Close_BRACKET
   39                  | IDENTIFIER . Open_BRACKET Close_BRACKET
   40                  | IDENTIFIER .

    Open_BRACKET     shift, and go to state 59
    OSquare_BRACKET  shift, and go to state 60

    $default  reduce using rule 40 (direct_declarator)


State 39

   42 declarator: direct_declarator .

    $default  reduce using rule 42 (declarator)


State 40

   51 initialisers_declarator: declarator .
   52                        | declarator . Equal assign_expressions

    Equal  shift, and go to state 61

    $default  reduce using rule 51 (initialisers_declarator)


State 41

   41 declarator: pointer . direct_declarator

    Open_BRACKET  shift, and go to state 36
    IDENTIFIER    shift, and go to state 57

    direct_declarator  go to state 62


State 42

   48 declaration: all_type_specifiers initialisers_list . Semicolon
   50 initialisers_list: initialisers_list . Comma initialisers_declarator

    Semicolon  shift, and go to state 63
    Comma      shift, and go to state 64


State 43

   49 initialisers_list: initialisers_declarator .

    $default  reduce using rule 49 (initialisers_list)


State 44

   31 all_type_specifiers: storage_specifiers all_type_specifiers .

    $default  reduce using rule 31 (all_type_specifiers)


State 45

   33 all_type_specifiers: type_specifier all_type_specifiers .

    $default  reduce using rule 33 (all_type_specifiers)


State 46

   34 all_type_specifiers: type_qualifier all_type_specifiers .

    $default  reduce using rule 34 (all_type_specifiers)


State 47

   30 function_definition: IDENTIFIER Open_BRACKET Close_BRACKET . compound_statement

    OCurly_BRACKET  shift, and go to state 65

    compound_statement  go to state 66


State 48

  118 parameter_declaration: all_type_specifiers . declarator
  119                      | all_type_specifiers .

    Multiply_MATH  shift, and go to state 35
    Open_BRACKET   shift, and go to state 36
    IDENTIFIER     shift, and go to state 57

    $default  reduce using rule 119 (parameter_declaration)

    direct_declarator  go to state 39
    declarator         go to state 67
    pointer            go to state 41


State 49

   29 function_definition: IDENTIFIER Open_BRACKET parameter_type_list . Close_BRACKET compound_statement

    Close_BRACKET  shift, and go to state 68


State 50

  114 parameter_type_list: parameter_list .
  115                    | parameter_list . Comma Ellipses
  116 parameter_list: parameter_list . Comma parameter_declaration

    Comma  shift, and go to state 69

    $default  reduce using rule 114 (parameter_type_list)


State 51

  117 parameter_list: parameter_declaration .

    $default  reduce using rule 117 (parameter_list)


State 52

  166 type_specifier: Typedef_KEY .

    $default  reduce using rule 166 (type_specifier)


State 53

   45 pointer: Multiply_MATH pointer .

    $default  reduce using rule 45 (pointer)


State 54

   44 pointer: Multiply_MATH specifier_qualifier_list .
   46        | Multiply_MATH specifier_qualifier_list . pointer

    Multiply_MATH  shift, and go to state 35

    $default  reduce using rule 44 (pointer)

    pointer  go to state 70


State 55

  104 specifier_qualifier_list: type_specifier .

    $default  reduce using rule 104 (specifier_qualifier_list)


State 56

  105 specifier_qualifier_list: type_qualifier . specifier_qualifier_list
  106                         | type_qualifier .
